tests/negative/test_cast_tuple_prim.orb
fnc main() () {
    let f:(i32 i32);
    cast i32 f;
};